# shaders-in-computer-graphics

./: .gitignore  .gitmodules  README.md
Project/: .gitignore  CMakeLists.txt  clean.sh  clean_build.sh  rebuild_and_run.sh  run.sh
Project/cmake/: glad.cmake  imgui.cmake
Project/include/constants/: constants.hpp  graphics_constants.hpp  math_constants.hpp  paths.hpp
Project/include/core/: application.hpp  engine.hpp
Project/include/examples/scenes/: cube_scene.hpp  plane_scene.hpp  quad_scene.hpp  sphere_scene.hpp  triangle_rainbow_scene.hpp  triangle_scene.hpp
Project/include/graphics/: color.hpp  gl.hpp  mesh.hpp  renderer.hpp  shader.hpp  types.hpp  vertex.hpp
Project/include/platform/: window.hpp
Project/include/scene/: camera.hpp  cube_scene.hpp  scene.hpp  scene_manager.hpp
Project/include/ui/: ui_manager.hpp
Project/include/ui/panels/: active_scene_settings_panel.hpp  engine_settings_panel.hpp  panel.hpp  performance_panel.hpp  scene_management_panel.hpp
Project/include/utils/: file_utils.hpp  math_utils.hpp  random_utils.hpp  string_utils.hpp  time_utils.hpp  utils.hpp
Project/include/view/: camera.hpp
Project/scripts/: clean.sh  clean_build.sh  rebuild_and_run.sh  run.sh
Project/shaders/basic/: fragment.glsl  vertex.glsl
Project/shaders/colored/: fragment.glsl  vertex.glsl
Project/shaders/fresnel/: fragment.glsl  vertex.glsl
Project/shaders/rainbow/: fragment.glsl  vertex.glsl
Project/shaders/uv/: fragment.glsl  vertex.glsl
Project/shaders/wave/: fragment.glsl  vertex.glsl
Project/src/: main.cpp
Project/src/core/: application.cpp  engine.cpp
Project/src/examples/scenes/: cube_scene.cpp  plane_scene.cpp  quad_scene.cpp  sphere_scene.cpp  triangle_rainbow_scene.cpp  triangle_scene.cpp
Project/src/graphics/: color.cpp  mesh.cpp  renderer.cpp  shader.cpp
Project/src/platform/: window.cpp
Project/src/scene/: camera.cpp  cube_scene.cpp  scene.cpp  scene_manager.cpp
Project/src/ui/: ui_manager.cpp
Project/src/ui/panels/: active_scene_settings_panel.cpp  engine_settings_panel.cpp  performance_panel.cpp  scene_management_panel.cpp
Project/src/view/: camera.cpp
